syntax = "proto3";
package types;
message Empty {}

message BlockHeader {
  string parent_hash = 1;
  string merkle_root = 2;
  string state_root = 3;
  string mix_nonce = 4;
  string coinbase = 5;
  uint32 difficulty = 6;
  uint32 chain_id = 7;
  int32 level = 8;
  uint32 time = 9;
  string nonce = 10;
}

message UnsignedTransaction {
  string nonce = 1;
  string to = 2;
  string amount = 3;
  string fee = 4;
  string data = 5;
}

message Transaction {
  string nonce = 1;
  string from = 2;
  string to = 3;
  string amount = 4;
  string fee = 5;
  string data = 6;
  string r = 7;
  string s = 8;
  string v = 9;
}